# otaripper

./: .README.md.kate-swp  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  FOLDER_SIZE_FEATURE.md  LICENSE  README.md  SIMD_PERFORMANCE.md  TECHINCAL.md  TECHNICAL.md  bench_avx512.rs  build.bat  build.ps1  build.rs  build.sh  install.sh  run-otaripper.bat
.cargo/: config.toml
.github/: build.yaml  dependabot.yml
.github/workflows/: build-release.yaml  build.yaml  manual-build.yml
contrib/: demo.mkv
docs/: IMPROVEMENTS.md  WINDOWS_RUN.md
src/: cmd.rs  lib.rs  main.rs  payload.rs
src/cmd/: arbscan.rs  extractor.rs  mod.rs  simd.rs
src/proto/: chromeos_update_engine.rs  mod.rs
src/protos/chromeos_update_engine/: update_metadata.proto
tests/: folder_opening_test.rs  folder_size_test.rs  simd_test.rs
