[package]
name         = "otaripper"
version      = "2.0.0"
edition      = "2024"
rust-version = "1.92.0"
authors      = ["Syed Insaf <syedinsaf@proton.me>"]
description  = "Fast partition extractor for Android OTA zip and payload.bin files"
repository   = "https://github.com/syedinsaf/otaripper"
license      = "Apache-2.0"
keywords     = ["android", "ota", "cli", "payload", "extractor", "aosp"]
categories   = ["command-line-utilities"]
readme       = "README.md"

[dependencies]
anyhow            = "1.0.100"
bzip2             = "0.6.1"
chrono            = "0.4.42"
clap              = { version = "4.5.54", features = ["derive"] }
color-print       = "0.3.7"
console           = { version = "0.16.2", features = ["windows-console-colors"] }
crossbeam-channel = "0.5.15"
ctrlc             = "3.5.1"
hex               = "0.4.3"
indicatif         = "0.18.3"
memmap2           = { version = "0.9.9", features = ["stable_deref_trait"] }
mimalloc          = { version = "0.1.48", features = ["v3"] }
prost             = "0.14.1"
rayon             = "1.11.0"
sha2              = "0.10.9"
xz2               = "0.1.7"
zip               = { version = "7.0.0", default-features = false, features = ["deflate", "bzip2", "zstd"] }

[build-dependencies]
prost-build = "0.14.1"

# Performance: Assembly-accelerated SHA-256 on Unix platforms
[target.'cfg(unix)'.dependencies]
sha2 = { version = "0.10.9", default-features = false, features = ["asm"] }



# Compatibility: Static liblzma only on musl to avoid glibc x86-64-v4 issues
[target.'cfg(target_env = "musl")'.dependencies]
xz2 = { version = "0.1.7", features = ["static"] }

[profile.release]
opt-level        = 3
lto              = "fat"
codegen-units    = 1
strip            = true
debug            = false
panic            = "abort"
overflow-checks  = false
incremental      = false